# whispa-demo-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-compose.yml.dev
chain-state/alice/chains/dev/db/full/: 000053.sst  000055.sst  000056.sst  000057.sst  000087.sst  000091.sst  000094.sst  000095.sst  000096.sst  000115.sst  000116.sst  000117.sst  000162.sst  000163.sst  000164.sst  000177.sst  000178.sst  000185.sst  000186.sst  000192.sst  000193.sst  000194.sst  000195.sst  000196.sst  000201.sst  IDENTITY  LOG  MANIFEST-000008  MANIFEST-000197  OPTIONS-000035  OPTIONS-000037  OPTIONS-000183
pallets/pallet-whisper/: Cargo.toml
pallets/pallet-whisper/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
